--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-  <p>hola</p>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft_logo"></a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contactos.html">Contactos</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
